--- a/views/projects_all.erb
+++ b/views/projects_all.erb
@@ -5,23 +5,27 @@
     <div class="content">
         <ul>
             <% Project.all.each_with_index do |(slug, proj), idx| %>
-            <li class="proj">
-                <div class="heasder">
-                    <h4>
-                        <a href="/project/<%= slug %>"><%= proj.title %></a>
-                    </h4>
+            <li class="blog-post project">
+                <div class="masthead">
+                    <div class="title">
+                        <h1><a href="/project/<%= slug %>"><%= proj.title %></a></h1>
+                    </div>
                     <% if proj.repo %>
                     <a title="Git Repository" class="repo" href="<%= proj.repo %>"><span class="src"></span></a>
                     <% end %>
                     <ul class="tags">
                         <% proj.tags.each do |tag| %>
-                        <li class="<%= get_tag_class tag %>"><%= get_tag_name tag %></li>
+                        <li class="tag <%= get_tag_class tag %>"><%= get_tag_name tag %></li>
                         <% end %>
                     </ul>
                 </div>
+                <div class="clear"></div>
                 <p>
                         <%= format_post proj.summary %>
                 </p>
+                <div class="controls bottom">
+                    <span><a class="btn read-more" href="/project/<%= slug %>">See more</a></span>
+                </div>
             </li>
             <% end %>
         </ul>
