--- a/views/main.scss
+++ b/views/main.scss
@@ -731,16 +731,41 @@ code {
 .infoBlock {
   border: solid !important;
   border-width: 1px !important;
-  border-color: #FFF !important;
+  border-color: #FFF;
   background: none !important;
   padding: 4px 11px !important;
 }
 
+.repo {
+  float: left;
+  margin-left: 10px;
+  text-decoration: none;
+  border: none;
+  color: #333;
+  -webkit-transition: .25s; 
+  -moz-transition: .25s;
+  -ms-transition: .25s;
+  -o-transition: .25s;
+  transition: .25s;
+  &:hover {
+    color: #2A92C9;
+  }
+}
+
+.infoBlock.dark {
+  background: #666 !important;
+  border: #666 !important;
+}
+
 .infoBlock a {
   text-decoration: none !important;
+  border: none !important;
   // font-size: 12px !important;
   font-weight: 100 !important;
   float: left !important;
+  &:hover {
+    color: #ddd;
+  }
 }
 
 .infoBlock span {
