--- a/views/index.erb
+++ b/views/index.erb
@@ -29,13 +29,13 @@
 						<div id="project-slider" class="royalSlider rsMinW">
 							<div class="rsContent">
 								<img class="rsImg" src="/project_res/fbanalytics-android/920.png"/>
-								<div class="infoBlock rsABlock rsAbsoluteEl infoBlockRight">analyze your facebook chat data!</div>
-								<div class="infoBlock rsABlock rsAbsoluteEl infoBlockBottom infoBlockLeft"> <span>more info</span></div>
+								<div class="infoBlock dark rsABlock rsAbsoluteEl infoBlockRight">analyze your facebook chat data!</div>
+								<div class="infoBlock dark rsABlock rsAbsoluteEl infoBlockBottom infoBlockLeft"><span><a href="/project/fbanalytics-android">more info</a></span></div>
 							</div>
 							<div class="rsContent">
 								<img class="rsImg" src="/project_res/libembryo/920.png"/>
-								<div class="infoBlock rsABlock rsAbsoluteEl infoBlockRight">mac os x reverse engineering</div>
-								<div class="infoBlock rsABlock rsAbsoluteEl infoBlockBottom infoBlockLeft"> <span>more info</sup></div>
+								<div class="infoBlock rsABlock rsAbsoluteEl infoBlockRight">mac os x reverse engineering library</div>
+								<div class="infoBlock rsABlock rsAbsoluteEl infoBlockBottom infoBlockLeft"><span><a href="/project/libembryo">more info</a></span></div>
 							</div>
 							<!-- <img class="rsImg" src="/test.jpg"/>	 -->
 						</div>
