--- a/views/index.erb
+++ b/views/index.erb
@@ -160,8 +160,9 @@
 						<h1>Feel free to <span class="highlight">contact me</span> through any of the following means!</h1>
 					</div>
 					<div class="form">
-						<form method="POST">
+						<form id="contact_form" action="/contact" method="POST">
 							<ul>
+								<li id="send-error"><span>Sorry! An error occured while sending.</span></li>
 								<li>
 									<input autocomplete="off" type="text" id="name" name="name" placeholder="name" required/>
 								</li>
