--- a/views/layout.erb
+++ b/views/layout.erb
@@ -29,6 +29,7 @@
         <script type="text/javascript" src="//cdn.jsdelivr.net/fancybox/2.1.5/helpers/jquery.fancybox-thumbs.js"></script>
         <script type="text/javascript" src="//cdn.jsdelivr.net/fancybox/2.1.5/jquery.fancybox.js"></script>
         <script type="text/javascript" src="//cdn.jsdelivr.net/fancybox/2.1.5/jquery.fancybox.pack.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.form/3.45/jquery.form.min.js"></script>
 		<script src="/main.js"></script>
 	</head>
 	<body>
