Add a bit more content

--- a/views/index.erb
+++ b/views/index.erb
@@ -71,7 +71,7 @@
 							SQL, Ruby, Python, Lua, Coffeescript, Go, D, and Haskell.
 						</p>
 						<p>
-							I've complete projects in reverse engineering, robotics, computer vision, web development and mobile &amp; desktop application development.
+							I've completed projects in reverse engineering, robotics, computer vision, web development and mobile &amp; desktop application development. Most of them are <a href="http://github.com/scen">open-source</a>!
 						</p>
 						<p>
 							Here's how it all started:
@@ -92,7 +92,24 @@
 								<div class="label">
 									<h2>Started programming in C</h2>
 									<span class="more">
-										<p>I taught myself through reading <em>C How to Program</em> by Deitel.</p>
+										<p>I taught myself by reading <em>C How to Program</em> by Deitel.</p>
+									</span>
+								</div>
+							</li>
+							<li>
+								<time>
+									<span>
+										9<sup>th</sup> grade
+									</span>
+									<span>
+										May '11
+									</span>
+								</time>
+								<div class="waypoint"></div>
+								<div class="label">
+									<h2>This website was born</h2>
+									<span class="more">
+										<p>The first version of this site was written in PHP (ew).</p>
 									</span>
 								</div>
 							</li>
@@ -126,7 +143,7 @@
 								<div class="label">
 									<h2>USA Computing Olympiad Finalist Camp</h2>
 									<span class="more">
-										<p>Although I bombed the first two contests, I still managed to attend the <a href="http://www.usaco.org/index.php?page=finalists13">2013 USACO finalist camp</a>!</p>
+										<p>I attended the <a href="http://www.usaco.org/index.php?page=finalists13">2013 USACO finalist camp</a>!</p>
 									</span>
 								</div>
 							</li>
