--- a/views/main.scss
+++ b/views/main.scss
@@ -507,6 +507,9 @@ code {
     }
   }
   div.body {
+    @media screen and (max-width: 500px) {
+      font-size: .9em;
+    }
     font-weight: 300;
     line-height: 1.5;
     h1,h2,h3,h4,h5,h6 {
