Remove some content

--- a/views/index.erb
+++ b/views/index.erb
@@ -109,7 +109,7 @@
 								<div class="label">
 									<h2>This website was born</h2>
 									<span class="more">
-										<p>The first version of this site was written in PHP (ew). It's come a long way</p>
+										<p>The first version of this site was written in PHP (ew).</p>
 									</span>
 								</div>
 							</li>
