Convert to relative units

--- a/views/index.erb
+++ b/views/index.erb
@@ -223,7 +223,7 @@
 							</ul>
 						</p>
 						<p>This is my latest (probably 6<sup>th</sup>) redesign of the site, featuring parallax scrolling and responsive design!</p>
-						<p>The design was pushed out on November 19<sup>th</sup> 2013. Let me know of any bugs you may find.</p>
+						<p>The design was pushed out on November 19<sup>th</sup> 2013. Let me know of any bugs you find!</p>
 						<div class="humanstxt">
 							<a href="/humans.txt"><img src="/logo-humans.png"/></a>
 						</div>
