--- a/views/main.scss
+++ b/views/main.scss
@@ -507,7 +507,7 @@ code {
     }
   }
   div.body {
-    @media screen and (max-width: 500px) {
+    @media screen and (max-width: 46em) {
       font-size: .9em;
     }
     font-weight: 300;
