Fix z-index issues

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -16,20 +16,15 @@
 		<link href="/rs/royalslider.css" rel="stylesheet" type="text/css"/>
 		<link href="/fontello.css" rel="stylesheet" type="text/css"/>
 		<link href="/rs/skins/minimal-white/rs-minimal-white.css" rel="stylesheet" type="text/css"/>
-		<link type="text/css" rel="stylesheet" href="//cdn.jsdelivr.net/fancybox/2.1.5/helpers/jquery.fancybox-buttons.css" />
-        <link type="text/css" rel="stylesheet" href="//cdn.jsdelivr.net/fancybox/2.1.5/helpers/jquery.fancybox-thumbs.css" />
-        <link type="text/css" rel="stylesheet" href="//cdn.jsdelivr.net/fancybox/2.1.5/jquery.fancybox.css" />
+        <link type="text/css" rel="stylesheet" href="/fancybox/jquery.fancybox.css" />
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 		<script src="/jquery.mobiledetect.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 		<script src="/rs/jquery.royalslider.min.js"></script>
 		<script src="/ga.js"></script>
-		<script type="text/javascript" src="//cdn.jsdelivr.net/fancybox/2.1.5/helpers/jquery.fancybox-buttons.js"></script>
-        <script type="text/javascript" src="//cdn.jsdelivr.net/fancybox/2.1.5/helpers/jquery.fancybox-media.js"></script>
-        <script type="text/javascript" src="//cdn.jsdelivr.net/fancybox/2.1.5/helpers/jquery.fancybox-thumbs.js"></script>
-        <script type="text/javascript" src="//cdn.jsdelivr.net/fancybox/2.1.5/jquery.fancybox.pack.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.form/3.45/jquery.form.min.js"></script>
+        <script type="text/javascript" src="/fancybox/jquery.fancybox.pack.js"></script>
 		<script src="/main.js"></script>
 	</head>
 	<body>
