Revert "Remove project carousel temporarily"
This reverts commit deba8942508bb5692854481504bdf5eb414dafda.

--- a/views/index.erb
+++ b/views/index.erb
@@ -26,7 +26,7 @@
 				</div>
 				<div class="wrapper">
 					<div class="slidewrapper">
-						<!-- <div id="project-slider" class="royalSlider rsMinW">
+						<div id="project-slider" class="royalSlider rsMinW">
 							<div class="rsContent">
 								<img class="rsImg" src="/project_res/fbanalytics-android/920.png"/>
 								<div class="infoBlock dark rsABlock rsAbsoluteEl infoBlockRight">analyze your facebook chat data!</div>
@@ -37,7 +37,8 @@
 								<div class="infoBlock rsABlock rsAbsoluteEl infoBlockRight">mac os x reverse engineering library</div>
 								<div class="infoBlock rsABlock rsAbsoluteEl infoBlockBottom infoBlockLeft"><span><a href="/project/libembryo">more info</a></span></div>
 							</div>
-						</div> -->
+							<!-- <img class="rsImg" src="/test.jpg"/>	 -->
+						</div>
 					</div>
 				</div>
 			</div>
