Change contact form

--- a/views/index.erb
+++ b/views/index.erb
@@ -173,7 +173,7 @@
 				</div>
 				<div class="content">
 					<div class="subtitle">
-						<h1>Feel free to <span class="highlight">contact me</span> through any of the following means!</h1>
+						<h1>Got a question? I'll get back to you as soon as possible.</h1>
 					</div>
 					<div class="form">
 						<form id="contact_form" action="/contact" method="POST">
