--- a/views/index.erb
+++ b/views/index.erb
@@ -2,7 +2,7 @@
 			<div id="home-shoutout">
 				<div>
 					<h1><%= GREETINGS.sample %></h1>
-					<h3>I'm <strong>Stanley Cen</strong>, a high school senior and computer science enthusiast living in Portland, Oregon.</h3>
+					<h3>I'm <strong>Stanley Cen</strong>, MIT '18</h3>
 				</div>
 			</div>
 			<div id="scroll-notifier">
