--- a/views/index.erb
+++ b/views/index.erb
@@ -60,14 +60,10 @@
 				<div class="content">
 					<div class="text">
 						<p>
-							I'm a 12<sup>th</sup> grade student attending Westview High School.
+							I'm a year 1 student attending the Massachusetts Institute of Technology.
 						</p>
 						<p>
 							I <span class="highlight">love</span> computer science and am always trying to learn new things.
-						</p>
-						<p>
-							Currently, I'm proficient in <span class="highlight">15</span> programming languages, including C, C++, Java, C#, HTML, JavaScript, CSS, PHP,
-							SQL, Ruby, Python, Lua, CoffeeScript, Go, D, and Haskell.
 						</p>
 						<p>
 							I've completed projects in reverse engineering, robotics, computer vision, web development and mobile &amp; desktop application development. Most of them are <a href="http://github.com/scen">open-source</a>!
