Update school wording

--- a/views/index.erb
+++ b/views/index.erb
@@ -60,7 +60,7 @@
 				<div class="content">
 					<div class="text">
 						<p>
-							I'm a year 1 student attending the Massachusetts Institute of Technology.
+							I'm studying Computer Science at the Massachusetts Institute of Technology.
 						</p>
 						<p>
 							I <span class="highlight">love</span> computer science and am always trying to learn new things.
