--- a/views/layout.erb
+++ b/views/layout.erb
@@ -26,6 +26,10 @@
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.form/3.45/jquery.form.min.js"></script>
         <script type="text/javascript" src="/fancybox/jquery.fancybox.pack.js"></script>
 		<script src="/main.js"></script>
+	    <script type="text/javascript">
+  window.heap=window.heap||[],heap.load=function(t,e){window.heap.appid=t,window.heap.config=e;var a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src=("https:"===document.location.protocol?"https:":"http:")+"//cdn.heapanalytics.com/js/heap.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(a,n);for(var o=function(t){return function(){heap.push([t].concat(Array.prototype.slice.call(arguments,0)))}},p=["identify","track"],c=0;c<p.length;c++)heap[p[c]]=o(p[c])};
+  heap.load("3908329247");
+		</script>
 	</head>
 	<body>
 		<div id="wrapall">
