Remove ga.js script load

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -22,13 +22,12 @@
 		<script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 		<script src="/rs/jquery.royalslider.min.js"></script>
-		<script src="/ga.js"></script>
+		<!--<script src="/ga.js"></script>-->
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.form/3.45/jquery.form.min.js"></script>
         <script type="text/javascript" src="/fancybox/jquery.fancybox.pack.js"></script>
 		<script src="/main.js"></script>
 	    <script type="text/javascript">
-  window.heap=window.heap||[],heap.load=function(t,e){window.heap.appid=t,window.heap.config=e;var a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src=("https:"===document.location.protocol?"https:":"http:")+"//cdn.heapanalytics.com/js/heap.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(a,n);for(var o=function(t){return function(){heap.push([t].concat(Array.prototype.slice.call(arguments,0)))}},p=["identify","track"],c=0;c<p.length;c++)heap[p[c]]=o(p[c])};
-  heap.load("3908329247");
+var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-4253037-6"]),_gaq.push(["_setDomainName","stanleycen.com"]),_gaq.push(["_trackPageview"]),function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src=("https:"==document.location.protocol?"https://ssl":"http://www")+".google-analytics.com/ga.js";var e=document.getElementsByTagName("script")[0];e.parentNode.insertBefore(t,e)}();var _paq=_paq||[];_paq.push(["trackPageView"]),_paq.push(["enableLinkTracking"]),function(){var t=("https:"==document.location.protocol?"https":"http")+"://analytics.stanleycen.com//";_paq.push(["setTrackerUrl",t+"piwik.php"]),_paq.push(["setSiteId",1]);var e=document,a=e.createElement("script"),s=e.getElementsByTagName("script")[0];a.type="text/javascript",a.defer=!0,a.async=!0,a.src=t+"piwik.js",s.parentNode.insertBefore(a,s)}();window.heap=window.heap||[],heap.load=function(t,e){window.heap.appid=t,window.heap.config=e;var a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src=("https:"===document.location.protocol?"https:":"http:")+"//cdn.heapanalytics.com/js/heap.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(a,n);for(var o=function(t){return function(){heap.push([t].concat(Array.prototype.slice.call(arguments,0)))}},p=["identify","track"],c=0;c<p.length;c++)heap[p[c]]=o(p[c])}; heap.load("3908329247");
 		</script>
 	</head>
 	<body>
