--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,6 +9,9 @@
             <% end %>
         </title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+		<% if @nav == 'home' %>
+			<meta name="Description" content="Hi! I'm Stanley Cen, a computer science enthusiast studying Course 6 at MIT. I love making stuff and here you'll find my projects and the stories behind them.">
+		<% end %>
 		<link rel="author" href="/humans.txt" />
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'/>
 		<link href="//cdnjs.cloudflare.com/ajax/libs/normalize/2.1.3/normalize.min.css" rel="stylesheet" type="text/css"/>
