--- a/views/layout.erb
+++ b/views/layout.erb
@@ -10,7 +10,7 @@
         </title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 		<% if @nav == 'home' %>
-			<meta name="Description" content="Hey there! I'm Stanley Cen, a computer science enthusiast studying Course 6 at MIT. I love making stuff and here you'll find my projects and the stories behind them.">
+			<meta name="Description" content="Hi there! I'm Stanley Cen, a computer science enthusiast studying Course 6 at MIT. I love making stuff and here you'll find my projects and their stories.">
 		<% end %>
 		<link rel="author" href="/humans.txt" />
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'/>
