--- a/views/main.scss
+++ b/views/main.scss
@@ -820,23 +820,9 @@ code {
 #projects_internal {
   font-family: "Open Sans";
   font-weight: 300;
-  div.header {
-    padding-top: $header_margin;
-    padding-bottom: $header_margin;
-    text-align: center;
-    background: url(/parallax3.jpg);
-    background-repeat: no-repeat;
-    background-position: center 0px;
-    background-attachment: fixed;
-    background-size: cover;
-    h1.header {
-      margin: 0 auto;
-      color: #fff;
-      font-size: 3.125em;
-    }
-  }
   .subtitle-wrap {
     padding-top: 3.125em;
+    padding-bottom: 3.125em;
     max-width: $maxwidth;
     margin: 0 auto;
     width: 90%;
@@ -897,41 +883,6 @@ code {
         font-size: 1.56em;
         font-weight: 300;
       }
-    }
-  }
-  div.text {
-    font-size: 1em;
-    max-width: $maxwidth;
-    width: 90%;
-    color: #292929;
-    margin: 0 auto;
-    margin-top: 30px;
-    p:last-child {
-      margin-bottom: 0;
-    }
-  }
-  div.wrapper {
-    overflow-x: hidden;
-    width: 100%;
-    div.slidewrapper {
-      margin: 0 auto;
-      padding: 0;
-      @media screen and (max-width: 940px) {
-        max-width: 640px !important;
-      }
-      @media screen and (max-width: 660px) {
-        max-width: 300px !important;
-      }
-      max-width: 920px;
-      .royalSlider {
-        width: 100%;
-        // margin-top: 30px !important;
-        // margin-bottom: 30px !important;
-      }
-      width: 100%;
-      margin: 0 auto;
-      margin-top: 30px;
-      margin-bottom: 30px;
     }
   }
 }
