--- a/views/main.scss
+++ b/views/main.scss
@@ -128,6 +128,8 @@ header {
   @media screen and (max-width: 40.625em) {
     a {
       border: none !important;
+      padding-left: 0 !important;
+      padding-right: 0 !important;
     }
     nav {
       float: none !important;
