--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,18 +13,14 @@
 			<meta name="Description" content="Hi there! I'm Stanley Cen, a computer science enthusiast studying Course 6 at MIT. I love making stuff and here you'll find my projects and their stories.">
 		<% end %>
 		<link rel="author" href="/humans.txt" />
-		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,300' rel='stylesheet' type='text/css'/>
-		<link href="//cdnjs.cloudflare.com/ajax/libs/normalize/2.1.3/normalize.min.css" rel="stylesheet" type="text/css"/>
+		<link href='http://fonts.googleapis.com/css?family=Raleway:400,100,300,700' rel='stylesheet' type='text/css'>
+		<link href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" rel="stylesheet" type="text/css"/>
+		<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
 		<link href="/main.css" rel="stylesheet" type="text/css"/>
-		<!-- <link href="/rs/royalslider.css" rel="stylesheet" type="text/css"/> -->
-		<link href="/fontello.css" rel="stylesheet" type="text/css"/>
-		<!-- <link href="/rs/skins/minimal-white/rs-minimal-white.css" rel="stylesheet" type="text/css"/> -->
-        <link type="text/css" rel="stylesheet" href="/fancybox/jquery.fancybox.css" />
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" defer></script>
 		<script src="/jquery.mobiledetect.js" defer></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" defer></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery.form/3.45/jquery.form.min.js" defer></script>
-        <script type="text/javascript" src="/fancybox/jquery.fancybox.pack.js" defer></script>
 		<script src="/main.js" defer></script>
 	    <script type="text/javascript">
 var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-4253037-6"]),_gaq.push(["_setDomainName","stanleycen.com"]),_gaq.push(["_trackPageview"]),function(){var t=document.createElement("script");t.type="text/javascript",t.async=!0,t.src=("https:"==document.location.protocol?"https://ssl":"http://www")+".google-analytics.com/ga.js";var e=document.getElementsByTagName("script")[0];e.parentNode.insertBefore(t,e)}();var _paq=_paq||[];_paq.push(["trackPageView"]),_paq.push(["enableLinkTracking"]),function(){var e="http://lake.stanleycen.com:8080/";_paq.push(["setTrackerUrl",e+"piwik.php"]),_paq.push(["setSiteId",1]);var a=document,p=a.createElement("script"),t=a.getElementsByTagName("script")[0];p.type="text/javascript",p.async=!0,p.defer=!0,p.src=e+"piwik.js",t.parentNode.insertBefore(p,t)}();window.heap=window.heap||[],heap.load=function(t,e){window.heap.appid=t,window.heap.config=e;var a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src=("https:"===document.location.protocol?"https:":"http:")+"//cdn.heapanalytics.com/js/heap.js";var n=document.getElementsByTagName("script")[0];n.parentNode.insertBefore(a,n);for(var o=function(t){return function(){heap.push([t].concat(Array.prototype.slice.call(arguments,0)))}},p=["identify","track"],c=0;c<p.length;c++)heap[p[c]]=o(p[c])}; heap.load("3908329247");
@@ -32,44 +28,69 @@ var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-4253037-6"]),_gaq.push(["_setDoma
 		<noscript><p><img src="http://lake.stanleycen.com:8080/piwik.php?idsite=1" style="border:0;" alt="" /></p></noscript>
 	</head>
 	<body>
-		<div id="wrapall">
-			<header id="header" class="hide-nav">
-				<a class="navicon-button">
-					<div class="navicon"></div>
-				</a>
-				<h1><a href="<%= @nav == 'home' ? '#home' : '/'%>">stanley cen</a></h1>
-				<nav>
-					<ul>
-						<li><a href="<%= nav_url(@nav,'projects') %>" class="<%= get_nav_classes 'projects' %>">projects</a></li>
-						<li><a href="<%= nav_url(@nav,'blog')%>" class="<%= get_nav_classes 'blog' %>">blog</a></li>
-						<li><a href="<%= @nav == 'home' ? '#about' : '/#about'%>" class="<%= get_nav_classes 'about' %>">about</a></li>
-						<li><a href="<%= @nav == 'home' ? '#contact' : '/#contact'%>" class="<%= get_nav_classes 'contact' %>">contact</a></li>
-						<li><a href="http://github.com/scen/" class="<%= get_nav_classes 'github' %>">github</a></li>
-					</ul>
-				</nav>
-			</header>
-			<div id="contentall">
-				<%= "<div style='height:52px'></div>" if @nav != 'home' %>
-				<%= yield %>
-			</div>
-			<footer>
-				<% if @nav == 'home' %>
-				<!-- <div class="scrollup">
-					<a href="#home"></a>
-				</div> -->
-				<% end %>
-				<div class="bar">
-					<div class="wrapper">
-						<span class="copyleft">
-							Designed with &lt;3 by Stanley Cen
-						</span>
-						<span class="latest-commit">
-							<% if !is_heroku? or (is_heroku? and $heroku and $last_commit and $the_commit) %>Running latest commit <a href="https://github.com/scen/stanleycen.com/commit/<%= get_commit_sha %>">
-		                <%= get_commit_sha[0...7] %></a> <%= get_commit_time.to_pretty %>: <%= '"' + get_commit_msg.split(/\n/).first + '"' %><% end %>
-						</span>
-					</div>
+		<div id="page-outer">
+			<div id="page">
+				<div class="rel">
+					<header id="header">
+						<div class="name"><a href="/"><h1>stanley</h1><h2>cen</h2></a></div>
+						<nav>
+							<ul>
+								<li><a href="<%= nav_url(@nav,'projects') %>" class="<%= get_nav_classes 'projects' %>">projects</a></li>
+								<li><a href="<%= nav_url(@nav,'blog')%>" class="<%= get_nav_classes 'blog' %>">blog</a></li>
+								<li><a href="<%= @nav == 'home' ? '#about' : '/#about'%>" class="<%= get_nav_classes 'about' %>">about</a></li>
+								<li><a href="<%= @nav == 'home' ? '#contact' : '/#contact'%>" class="<%= get_nav_classes 'contact' %>">contact</a></li>
+								<li><a href="http://github.com/scen/" class="<%= get_nav_classes 'github' %>">github</a></li>
+							</ul>
+						</nav>
+					</header>
 				</div>
-			</footer>
+				<section id="masthead">
+					<div class="parallax-wrap">
+						<div class="parallax-img"><div class="darken-filter"></div></div>
+						<div class="parallax-content">
+							<div class="masthead-home-tagline">
+								<h1>Hello, world!</h1>
+							</div>
+						</div>
+					</div>
+				</section>
+				<section style="height: 1000px">
+				</section>
+				<!-- <header id="header" class="hide-nav">
+					<a class="navicon-button">
+						<div class="navicon"></div>
+					</a>
+					<h1><a href="<%= @nav == 'home' ? '#home' : '/'%>">stanley cen</a></h1>
+					<nav>
+						<ul>
+							<li><a href="<%= nav_url(@nav,'projects') %>" class="<%= get_nav_classes 'projects' %>">projects</a></li>
+							<li><a href="<%= nav_url(@nav,'blog')%>" class="<%= get_nav_classes 'blog' %>">blog</a></li>
+							<li><a href="<%= @nav == 'home' ? '#about' : '/#about'%>" class="<%= get_nav_classes 'about' %>">about</a></li>
+							<li><a href="<%= @nav == 'home' ? '#contact' : '/#contact'%>" class="<%= get_nav_classes 'contact' %>">contact</a></li>
+							<li><a href="http://github.com/scen/" class="<%= get_nav_classes 'github' %>">github</a></li>
+						</ul>
+					</nav>
+				</header>
+				<div id="contentall">
+					<%= "<div style='height:52px'></div>" if @nav != 'home' %>
+					<%= yield %>
+				</div>
+				<footer>
+					<% if @nav == 'home' %>
+					<% end %>
+					<div class="bar">
+						<div class="wrapper">
+							<span class="copyleft">
+								Designed with &lt;3 by Stanley Cen
+							</span>
+							<span class="latest-commit">
+								<% if !is_heroku? or (is_heroku? and $heroku and $last_commit and $the_commit) %>Running latest commit <a href="https://github.com/scen/stanleycen.com/commit/<%= get_commit_sha %>">
+			                <%= get_commit_sha[0...7] %></a> <%= get_commit_time.to_pretty %>: <%= '"' + get_commit_msg.split(/\n/).first + '"' %><% end %>
+							</span>
+						</div>
+					</div>
+				</footer> -->
+			</div>
 		</div>
 	</body>
 </html>
