--- a/views/main.scss
+++ b/views/main.scss
@@ -7,6 +7,7 @@ SASS can name breakpoints for media queries!!
 // Vars
 
 $header-height: 50px;
+$page-top-padding: 40px;
 
 // Colors
 
@@ -20,7 +21,7 @@ body {
 
 #page-outer {
   padding-bottom: 40px;
-  padding-top: 40px;
+  padding-top: $page-top-padding;
 
   // TODO: should these be fixed?
   // padding-left: 4%;
@@ -117,7 +118,7 @@ body {
 
           &.blur {
             color: transparent;
-            text-shadow: 0 0 3px rgba(255,255,255,1);
+            text-shadow: 0 0 4px rgba(255,255,255,1);
           }
         }
       }
@@ -128,18 +129,32 @@ body {
 // Masthead
 
 #masthead {
-  height: 600px;
+  height: 800px;
 }
 
 .masthead-home-tagline {
-  position: absolute;
+  position: relative;
+  height: 100%;
   margin: 0 auto;
-  text-align: center;
-  top: 50%; left: 50%;
-  @include translate(-50%, -50%);
+  padding-left: 80px;
+  padding-right: 80px;
 
-  & > h1 {
-    font-weight: 100;
+  & > div {
+    position: relative;
+    width: 100%;
+    max-width: 850px;
+    margin: 0 auto;
+    top: 50%;
+    @include transform(translateY(-50%));
+
+    & > * {
+      font-weight: 100;
+    }
+
+    & > h3 {
+      // font-size: 3rem;
+      // margin-bottom: 0;
+    }
   }
 }
 
@@ -148,6 +163,39 @@ body {
   opacity: 0.5;
   width: 100%;
   height: 100%;
+}
+
+@-webkit-keyframes bounce-fade {
+  0%   { opacity: 0; bottom: 80px; }
+  100% { opacity: 1; bottom: 10px; }
+}
+@-moz-keyframes bounce-fade {
+  0%   { opacity: 0; bottom: 80px; }
+  100% { opacity: 1; bottom: 10px; }
+}
+@-o-keyframes bounce-fade {
+  0%   { opacity: 0; bottom: 80px; }
+  100% { opacity: 1; bottom: 10px; }
+}
+@keyframes bounce-fade {
+  0%   { opacity: 0; bottom: 80px; }
+  100% { opacity: 1; bottom: 10px; }
+}
+
+#scroll-notifier {
+  position: absolute;
+  z-index: 1000;
+  bottom: 10px;
+  text-align: center;
+  margin: 0 auto !important;
+  width: 100%;
+  height: 29px;
+  background: url(/img/scroll.png) no-repeat center center;
+  display: block;
+  -webkit-animation: bounce-fade 2s infinite; /* Safari 4+ */
+  -moz-animation:    bounce-fade 2s infinite; /* Fx 5+ */
+  -o-animation:      bounce-fade 2s infinite; /* Opera 12+ */
+  animation:        bounce-fade 2s infinite; /* IE 10+ */
 }
 
 // Parallax
